corrected errors on mobile responsiveness

--- a/css/home.css
+++ b/css/home.css
@@ -6,12 +6,17 @@
   font-family: "Poppins", sans-serif;
 }
 
+html, body{
+  overflow-x: hidden;
+}
+
+
 /* HEADER AND FOOTER STYLING */
 
 header {
   position: sticky;
   background-color: #fff;
-  top: 0%;
+  top: 0;
   left: 0;
   right: 0;
   z-index: 1000;
@@ -546,6 +551,10 @@ display: none;
   height: 200px;
 }
 
+img{
+  object-fit: cover;
+}
+
 /* DESKTOP SYTLING*/
 
 @media only screen and (min-width: 767px) {
@@ -885,9 +894,9 @@ display: none;
 
 
 @media (max-width: 920px) {
-  body{
+  /* body{
     overflow-x: hidden;
-  }
+  } */
   .menu-btn{
     display: unset;
   }
