--- a/css/ycp.css
+++ b/css/ycp.css
@@ -7,15 +7,15 @@
   --dark: #444444;
 }
 
-html {
+html,body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
-body {
+* {
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 /* HEADER AND FOOTER STYLING */
@@ -23,7 +23,7 @@ body {
 header {
   position: sticky;
   background-color: #fff;
-  top: 0%;
+  top: 0;
   left: 0;
   right: 0;
   z-index: 1000;
@@ -35,6 +35,7 @@ li {
   text-decoration: none;
   color: inherit;
 }
+
 
 nav {
   display: flex;
@@ -181,7 +182,6 @@ footer {
 }
 .submit input:nth-of-type(2) {
   margin-left: -10px;
-  width: 20%;
   background: #f9a11b;
   box-shadow: 0px 8px 12px rgba(249, 161, 27, 0.32);
   border-radius: 0px 8px 8px 0px;
@@ -189,6 +189,7 @@ footer {
   color: #fff;
   height: 60px;
   cursor: pointer;
+  width: 20%;
 }
 .submit input:nth-of-type(2):hover {
   background: rgb(16, 92, 94);
@@ -803,7 +804,6 @@ main {
   }
   .submit input:nth-of-type(2) {
       margin-left: -10px;
-      width: 25%;
       font-size: 12px;
       height: 40px;
   }
